...
                            let mapViewController = self.storyboard?.instantiateViewController(withIdentifier: "MapViewController") as! MapViewController
                            self.navigationController?.present(mapViewController, animated: true)
                    }))
                    self.present(userCreatedAlert, animated: true)
                }else{
                    //alert prompts user to edit registration info
                    let userErrorAlert = UIAlertController(title: "Error Creating User", message: "", preferredStyle: .alert)
                    userErrorAlert.addAction(UIAlertAction(title: "Edit Info", style: .cancel, handler: nil))
                    self.present(userErrorAlert, animated: true)
            }
        }
    }
    
    //construct a dictionary used for Okta API request
...
